force-app/main/default/objects/ONEN_Household__c/fields/Anonymous__c.field-meta.xml
<CustomField>
    <fullName>Anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Donor wants to be anonymous</description>
    <label>Anonymous</label>
    <type>Checkbox</type>
</CustomField>