force-app/main/default/objects/ONEN_Household__c/fields/household_id__c.field-meta.xml
<CustomField>
    <fullName>household_id__c</fullName>
    <description>for migration</description>
    <label>household id</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>