force-app/main/default/objects/ONEN_Household__c/fields/Household_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Household_Maintenance__c</fullName>
    <formula>HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N700000000rJg&amp;eid=&quot; &amp; Id  &amp; &quot;&amp;direction=toContact&quot;, IMAGE( &quot;servlet/servlet.FileDownload?file=01570000000Lo7y&quot;, &quot;image from Documents tab&quot;))</formula>
    <label>Household Maintenance</label>
    <type>Text</type>
</CustomField>