force-app/main/default/objects/ONEN_Household__c/fields/MailingCountry__c.field-meta.xml
<CustomField>
    <fullName>MailingCountry__c</fullName>
    <label>Mailing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>