force-app/main/default/objects/ONEN_Household__c/fields/MailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>MailingPostalCode__c</fullName>
    <label>Mailing Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>