force-app/main/default/objects/ONEN_Household__c/fields/MailingState__c.field-meta.xml
<CustomField>
    <fullName>MailingState__c</fullName>
    <label>Mailing State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>