force-app/main/default/objects/ONEN_Household__c/fields/MailingStreet__c.field-meta.xml
<CustomField>
    <fullName>MailingStreet__c</fullName>
    <label>Mailing Street</label>
    <type>TextArea</type>
</CustomField>