force-app/main/default/objects/ONEN_Household__c/fields/Recognition_Name__c.field-meta.xml
<CustomField>
    <fullName>Recognition_Name__c</fullName>
    <description>Preferred name when recognizing gifts</description>
    <label>Recognition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>