force-app/main/default/objects/ONEN_Household__c/fields/Recognition_Name_Short__c.field-meta.xml
<CustomField>
    <fullName>Recognition_Name_Short__c</fullName>
    <description>Short version of prefered</description>
    <label>Recognition Name - Short</label>
    <length>255</length>
    <type>Text</type>
</CustomField>